# aritha_security

./: CMakeLists.txt  README.md
include/: ai_detector.hpp  buffer_queue.h  buffer_queue.hpp  config.h  config.hpp  logger.h  motion_detector.h  motion_detector.hpp  utilities.h  utilities.hpp  video_capture.h  video_capture.hpp  video_encoder.h  video_encoder.hpp  video_streamer.hpp
src/: ai_detector.cpp  buffer_queue.cpp  config.cpp  logger.cpp  main.cpp  motion_detector.cpp  video_capture.cpp  video_encoder.cpp  video_streamer.cpp
